# termill

./: .gitignore  Makefile  README.md  demo.json  demo.py  pyproject.toml  setup.cfg
.hooks/: pre-push
src/termill/: __init__.py
