[tool.poetry]
name = "termill"
version = "0.1.1"
description = ""
authors = ["Axel <dev@absalon.is>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/ikornaselur/termill"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
isort = "^4.0.0"
black = "^19.10b0"
mypy = "^0.782"
flake8 = "^3.8.3"
flake8-builtins = "^1.5.3"
flake8-isort = "^4.0.0"
flake8-bugbear = "^20.1.4"
flake8-black = "^0.2.1"
flake8-comprehensions = "^3.2.3"
flake8-annotations = "^2.3.0"
ipdb = "^0.13.3"
pdbpp = "^0.10.2"
pytest = "^6.0.1"
pytest-clarity = "^0.3.0-alpha.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
